# game-of-life

./: .clang-format  .clang-tidy  CMakeLists.txt  ConwayCell.h  ConwayDefs.h  ConwayGrid.cpp  ConwayGrid.h  GOLConfig.cpp  GOLConfig.h  GOLFile.cpp  GOLFile.h  GOLTests.cpp  GameOfLife.cpp  GameOfLife.h  LICENSE  MooreNeighbor.cpp  MooreNeighbor.h  README.md  Window.cpp  Window.h  blinker.cells  block.cells  build.sh  conanfile.py  conanfile.txt  gol_config.json  main.cpp  record_game.sh
.github/workflows/: build.yml
patterns/: glider_color.rle  gosperblocks.cells  lwss.rle  pseudo.cells  spaceships.rle
tests/: TestConfig.h.in
